--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="bg-white">
+<header class="bg-white border-b border-gray-200 sticky top-0 z-50 shadow-sm">
     <div class="header-container">
         <div class="flex items-center justify-between h-16 sm:h-20">
             
