--- a/client/src/app/features/shop/shop.component.html
+++ b/client/src/app/features/shop/shop.component.html
@@ -1,7 +1,31 @@
-<div class="shop-container">
-    <div class="product-grid">
-        @for (product of products; track product.id) {
-            <app-product-item [product]="product"></app-product-item>
-        }
+<div class="flex flex-col gap-3">
+    <div class="controls-container">
+        <div class="flex justify-start gap-4">
+            <button mat-stroked-button class="filter-btn" (click)="openFiltersDialog()">
+                <mat-icon>filter_list</mat-icon>
+                Filters
+            </button>
+            <button mat-stroked-button class="sort-btn" [mat-menu-trigger-for]="sortMenu">
+                <mat-icon>swap_vert</mat-icon>
+                Sort
+            </button>
+        </div>
+    </div>
+    
+    <div class="shop-container">
+        <div class="product-grid">
+            @for (product of products; track product.id) {
+                <app-product-item [product]="product"></app-product-item>
+            }
+        </div>
     </div>
 </div>
+<mat-menu #sortMenu="matMenu">
+    <mat-selection-list [multiple]="false" (selectionChange)="onSortChange($event)">
+        @for (sort of sortOptions; track $index) {
+            <mat-list-option [value]="sort.value" [selected]="selectedSort === sort.value">
+                {{sort.name}}
+            </mat-list-option>
+        }
+    </mat-selection-list>
+</mat-menu>
