--- a/client/src/app/features/shop/shop.component.html
+++ b/client/src/app/features/shop/shop.component.html
@@ -8,7 +8,7 @@
                         type="text" 
                         class="search-input" 
                         placeholder="Search products..." 
-                        [(ngModel)]="searchTerm"
+                        [(ngModel)]="shopParams.search"
                         (input)="onSearchChange()"
                     />
                 </div>
@@ -32,12 +32,25 @@
                 <app-product-item [product]="product"></app-product-item>
             }
         </div>
+        
+        <!-- Pagination -->
+        <div class="pagination-container">
+            <mat-paginator 
+                [length]="totalCount"
+                [pageSize]="shopParams.pageSize"
+                [pageIndex]="shopParams.pageNumber - 1"
+                [pageSizeOptions]="[6, 12, 18, 24]"
+                [showFirstLastButtons]="true"
+                (page)="onPageChange($event)"
+                class="custom-paginator">
+            </mat-paginator>
+        </div>
     </div>
 </div>
 <mat-menu #sortMenu="matMenu">
     <mat-selection-list [multiple]="false" (selectionChange)="onSortChange($event)">
         @for (sort of sortOptions; track $index) {
-            <mat-list-option [value]="sort.value" [selected]="selectedSort === sort.value">
+            <mat-list-option [value]="sort.value" [selected]="shopParams.sort">
                 {{sort.name}}
             </mat-list-option>
         }
