--- a/client/src/app/features/shop/product-item/product-item.component.html
+++ b/client/src/app/features/shop/product-item/product-item.component.html
@@ -1,6 +1,6 @@
 @if (product) {
-    <mat-card appearance="raised" routerLink="/shop/{{product?.id}}">
-        <img src="{{product?.pictureUrl}}" alt="Image of {{product.name}}">
+    <mat-card appearance="raised" routerLink="/shop/{{product.id}}">
+        <img src="{{product.pictureUrl}}" alt="Image of {{product.name}}">
         <mat-card-content class="mt-2">
             <h2 class="text-sm font-semibold uppercase">{{product.name}}</h2>
             <p class="font-light">{{product.price | currency}}</p>
