--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -11,7 +11,7 @@
             <nav class="hidden lg:flex space-x-6 xl:space-x-12">
                 <a routerLink="/" class="nav-link" routerLinkActive="nav-link-active" [routerLinkActiveOptions]="{exact: true}">HOME</a>
                 <a routerLink="/shop" class="nav-link" routerLinkActive="nav-link-active">SHOP</a>
-                <a routerLink="/contact" class="nav-link" routerLinkActive="nav-link-active">CONTACT</a>
+                <a routerLink="/test-error" class="nav-link" routerLinkActive="nav-link-active">Errors</a>
             </nav>
 
             <!-- Right Section -->
