--- a/client/src/app/features/shop/product-details/product-details.component.scss
+++ b/client/src/app/features/shop/product-details/product-details.component.scss
@@ -8,7 +8,7 @@
   width: 80%;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 2rem 1rem;
+  padding: 1rem;
   
   @media (max-width: 1024px) {
     width: 90%;
