--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -58,3 +58,7 @@
         </div>
     </div>
 </header>
+
+@if (busyService.loading) {
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+}
